[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "identyx"
version = "0.2.0b1"
description = "Zero-config IAM and policy enforcement for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["ai-agents", "iam", "security", "policy", "audit", "langgraph", "crewai"]
authors = [
    { name = "Identyx", email = "hello@identyx.io" }
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage   = "https://identyx.io"
Repository = "https://github.com/getidentyx/identyx-python"
