[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interseptix"
version = "0.2.0b1"
description = "Zero-config IAM and policy enforcement for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["ai-agents", "iam", "security", "policy", "audit", "langgraph", "crewai"]
authors = [
    { name = "Interseptix", email = "hello@interseptix.com" }
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage   = "https://interseptix.com"
Repository = "https://github.com/interseptix/interseptix-python"
