[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interseptix"
version = "0.3.0"
description = "Zero-config IAM and policy enforcement for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["ai-agents", "iam", "security", "policy", "audit", "langgraph", "crewai"]
authors = [
    { name = "Interseptix", email = "hello@interseptix.com" }
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage   = "https://interseptix.com"
Repository = "https://github.com/useInterseptix/interseptix-python"

# Explicit package discovery. The project root contains extra top-level
# directories (tests/, dist/, *.egg-info) and a stray __init__.py, which makes
# setuptools flat-layout auto-discovery ambiguous. Restrict discovery to the
# `interseptix` package and its subpackages (e.g. interseptix.integrations).
[tool.setuptools.packages.find]
include = ["interseptix*"]
exclude = ["tests*"]
